--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <title>Yo App</title>
   </head>
   <body>
-    <div id='root'>
+    <div id="root">
     </div>
-    <script src="localhost:3333/assets/vendors.js"></script>
-    <script src="localhost:3333/assets/app.js"></script>
+    <script src="/assets/vendors.js"></script>
+    <script src="/assets/app.js"></script>
   </body>
 </html>
