--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Lorem Ipsum</title>
+    <title>Typescript-Webpack-React-Flux/Redux boilerplate</title>
   </head>
   <body>
     <div id="root">
